tests/paczka2/big_fuzzy/20805160.err
Error in line 1: x7e S820 82,5
Error in line 7: x7e A822 74,5
Error in line 36: S257 S820 11,0
Error in line 29: jignNP A822 12,8
Error in line 43: dWXvoxe S820 140,1
Error in line 69: jignNP S820 8,8
Error in line 79: dWXvoxe S820 83,9
Error in line 80: C9cxBjCL7I A822 0,3
Error in line 82: dWXvoxe A362 71,2
Error in line 93: N7FDttGO S2v7 1v,7
Error in line 95: C9cxBjCL7I A822 44,7
Error in line 99: C9cxBjCL7I S820 5,4
Error in line 89: 2VUy0T A822 64,0
Error in line 106: S257 A362 26,2
Error in line 120: x7e S257 149,5
Error in line 125: x7e A362 81,8
Error in line 131: 2VUy0T A362 9,6
Error in line 103: dWXvoxe A822 88,6
Error in line 149: S257 S257 73,8
Error in line 154: S257 A822 70,0
Error in line 155: S257 S820 36,0
Error in line 160: N7FDttGO S820 8,7
Error in line 171: N7FDttGO A362 90,4
Error in line 177: N7FDttGO S820 82,3
Error in line 180: N7FDttGO A362 85,8
Error in line 185: N7FDttGO S257 55,1
Error in line 187: C9cxBjCL7I A822 52,7
Error in line 198: jignNP A822 7,3
Error in line 205: N7FDttGO S820 10,6
Error in line 204: jignNP S257 84,0
Error in line 211: jignNP A822 79,4
Error in line 207: N7FDttGO S257 73,0
Error in line 242: C9cxBjCL7I S820 53,2
Error in line 244: C9cxBjCL7I A822 104,61
Error in line 247: x7e S257 16,0
